#-----------------------------------------------------------------------------
#
#  Copyright (C) 2006-2021  Florian Pose, Ingenieurgemeinschaft IgH
#
#  This file is part of the IgH EtherCAT Master.
#
#  The IgH EtherCAT Master is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License version 2, as
#  published by the Free Software Foundation.
#
#  The IgH EtherCAT Master is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
#  Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with the IgH EtherCAT Master; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
#-----------------------------------------------------------------------------

include $(top_srcdir)/Makefile.kbuild

EXTRA_DIST = \
    r8169-5.10-ethercat.h \
    r8169-5.10-orig.h \
    r8169-5.14-ethercat.h \
    r8169-5.14-orig.h \
    r8169-5.15-ethercat.h \
    r8169-5.15-orig.h \
	r8169-6.1-ethercat.h \
	r8169-6.1-orig.h \
    r8169_firmware-5.10-ethercat.c \
    r8169_firmware-5.10-ethercat.h \
    r8169_firmware-5.10-orig.c \
    r8169_firmware-5.10-orig.h \
    r8169_firmware-5.14-ethercat.c \
    r8169_firmware-5.14-ethercat.h \
    r8169_firmware-5.14-orig.c \
    r8169_firmware-5.14-orig.h \
    r8169_firmware-5.15-ethercat.c \
    r8169_firmware-5.15-ethercat.h \
    r8169_firmware-5.15-orig.c \
    r8169_firmware-5.15-orig.h \
	r8169_firmware-6.1-ethercat.c \
	r8169_firmware-6.1-ethercat.h \
	r8169_firmware-6.1-orig.c \
	r8169_firmware-6.1-orig.h \
    r8169_main-5.10-ethercat.c \
    r8169_main-5.10-orig.c \
    r8169_main-5.14-ethercat.c \
    r8169_main-5.14-orig.c \
    r8169_main-5.15-ethercat.c \
    r8169_main-5.15-orig.c \
	r8169_main-6.1-ethercat.c \
	r8169_main-6.1-orig.c \
    r8169_phy_config-5.10-ethercat.c \
    r8169_phy_config-5.10-orig.c \
    r8169_phy_config-5.14-ethercat.c \
    r8169_phy_config-5.14-orig.c \
    r8169_phy_config-5.15-ethercat.c \
    r8169_phy_config-5.15-orig.c \
	r8169_phy_config-6.1-ethercat.c \
	r8169_phy_config-6.1-orig.c

#-----------------------------------------------------------------------------
